<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context="hu.ait.placesaver.EditPlaceActivity">

    <EditText
        android:id="@+id/etLocTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/add_place_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


        <ImageView
            android:id="@+id/lat_long_iv"
            android:layout_width="@dimen/edit_activity_buttons_size"
            android:layout_height="@dimen/edit_activity_buttons_size"
            android:src="@drawable/pin"
            android:paddingBottom="@dimen/edit_activity_buttons_padding_bottom"
            android:layout_gravity="center_horizontal"/>
        <ImageView
            android:id="@+id/cameraIcon"
            android:src="@drawable/cameraicon"
            android:layout_width="@dimen/edit_activity_buttons_size"
            android:layout_height="@dimen/edit_activity_buttons_size"
            android:paddingBottom="@dimen/edit_activity_buttons_padding_bottom"
            />

        <ImageView
            android:id="@+id/viewPic"
            android:src="@drawable/viewimageicon"
            android:layout_width="@dimen/edit_activity_buttons_size"
            android:layout_height="@dimen/edit_activity_buttons_size"
            android:paddingBottom="@dimen/edit_activity_buttons_padding_bottom"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/etLocDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="date"
            android:hint="@string/date_mm_dd_yyyy" />

        <EditText
            android:id="@+id/etLocTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="time"
            android:hint="@string/date_hh_mm"/>

    </LinearLayout>

    <EditText
        android:id="@+id/etLocDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:hint="@string/add_place_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"/>

    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="hu.ait.placesaver.MapsActivitySpecific" />

</LinearLayout>
